--- a/08-HTML/homework/style.css
+++ b/08-HTML/homework/style.css
@@ -15,3 +15,11 @@ img {
     font-size: 18px;
     margin: 50px;  
 }
+
+.DivClass {
+    background-color: grey;
+}
+
+div {
+    background-image: url("https://img.freepik.com/foto-gratis/vista-papel-arrugado-blanco_1194-7544.jpg");
+  }
